@@ -1,3 +1,8 @@
+2000-05-31  Ken Raeburn  <raeburn@mit.edu>
+
+	* krb5.conf.M: Added description of v4_realm from Booker
+	C. Bense.
+
 2000-01-21  Ken Raeburn  <raeburn@mit.edu>
 
 	* krb5.conf: Put primary KDC for Cygnus first.  Add GNU.ORG
